--- a/static/style.css
+++ b/static/style.css
@@ -1,79 +1,119 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body {
-            font-family: Arial, sans-serif;
-            background: #f2f2f2;
-            margin: 0;
-            padding: 20px;
-            height: 90vh; /* full screen height */
-            display: flex;
-            justify-content: center; /* horizontal center */
-            align-items: center;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-            max-width: 500px;
-            width: 100%;
-
-        }
-        .container h2{
-            text-align: center;
-            color: #ff2b2b;
-            margin-bottom: 20px;
-        }
-        input {
-            width: 94.5%;
-            padding: 12px;
-            border-radius: 8px;
-            border: 1px solid #727070;
-            margin-bottom: 10px;
-        }
-        input:focus {
-            border-color: #007bff;
-            outline: none;
-        }
-        input:hover{
-            border-color: #007bff; 
-        }
-        button {
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
-            background: #007bff;
-            color: white;
-            cursor: pointer;
-            width: 100%;
-            margin-top: 5px;
-        }
-        button:hover { background: #0056b3; }
-        .preview {
-            margin-top: 20px;
-            text-align: center;
-        }
-        p{
-            color: #333;
-            font-size: 15px;
-            margin-bottom: 10px;
-        }
-        img {
-             max-width: 70%;
-             height: 70%;
-             border-radius: 15px;
-             }
-        select {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border-radius: 8px;
-        }
+    font-family:poppins;
+    background: #ffffff;
+    margin: 30px;
+    padding: 20px;
+    height: max-content; /* full screen height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.about{
+    margin-top: 130px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    max-width: 900px;
+    line-height: 4rem;
+}
+.about h1{
+    font-size: 60px;
+    font-weight: 500;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    background: linear-gradient(90deg, #00c2ff, #ff0080);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    margin-bottom: 10px;
+}
+.about p{
+    font-size: 23px;
+    font-weight: 200;
+    margin-bottom: 20px;
+}
+.container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    background: rgb(255, 255, 255);
+    padding: 30px;
+    border-radius: 35px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.201);
+    max-width: 1000px;
+    width: 100%;
+    border: 1px solid rgba(255, 0, 0, 0.219);
+    height:fit-content;
+}
+input {
+    width: 95%;
+    min-width: 80%;
+    padding: 30px;
+    border-radius: 20px;
+    border: 1px solid #0000001f;
+    font-size:20px;
+}
+input:focus {
+    border-color: #ff00005e;
+    outline: none;
+}
+input:hover{
+    border-color: #ff00005e; 
+}
+button {
+    padding: 20px;
+    border: none;
+    border-radius: 20px;
+    background: #ff1818;
+    color: white;
+    cursor: pointer;
+    width: 100%;
+    font-size: 20px;
+}
+button:hover { background: #e20000; }
+button:active { background: #e20000; }
+.preview {
+    text-align: center;
+}
+.preview p{
+    color: #333;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom:20px;
+}
+img {
+        max-width: 90%;
+        border-radius: 20px;
+}
+select {
+    width: 100%;
+    padding: 20px;
+    margin: 20px 0px;
+    border-radius: 20px;
+}
+#disclaimer{
+    color: #fe0000;
+    font-size: 20px;
+    font-weight: 400;
+    margin-top:20px;
+    margin-bottom: 0px;
+}
 
         /* 🔹 Loading overlay */
 .loading-overlay {
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0, 0, 0, 0.489);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -84,7 +124,7 @@ body {
 /* 🔹 Spinner */
 .spinner {
     border: 6px solid #f3f3f3;
-    border-top: 6px solid #007bff;
+    border-top: 6px solid #ff0000;
     border-radius: 50%;
     width: 50px; height: 50px;
     animation: spin 1s linear infinite;
