--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <input type="text" id="url" placeholder="Paste video URL here" required>
         <button onclick="getInfo()">Click me to get video info</button>
-           <!-- Loading Overlay -->
+           <!-- Loading overlay for prcessing -->
         <div id="loading" class="loading-overlay" style="display:none;">
             <div class="spinner"></div>
                 <p style="color:rgb(255, 0, 0);">Please wait while processing...</p>
